--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,9 +16,9 @@
         <nav class="menu-nav" >
             <ul>
                 <li><a href="#">Sobre </a></li>
-                <li><a href="#">Produtos</a></li>
-                <li><a href="#">Portfólio</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#produto">Produtos</a></li>
+                <li><a href="#portifolio">Portfólio</a></li>
+                <li><a href="#contato">Contato</a></li>
                 
             </ul>
         </nav>
@@ -48,7 +48,7 @@
             Enim, iste consequatur? Facilis asperiores eligendi nemo,
              sint labore eveniet est aspernatur.</P>
     </section >
-    <section class="produtos">
+    <section class="produtos" id="produto">
         <div class="produtos-container">
             <div class="produtos-item">
                 <h2 class="produtos-paulista">Paulista</h2>
@@ -74,7 +74,7 @@
         </div>
         <a class="produtos-btn" href="#">Saiba Mais</a>
     </section>
-    <section class="locais">
+    <section class="locais" id="portifolio">
         <div class="locais-item">
             <img src="img/botafogo.jpg" 
             alt="Unidade Botafogo">
@@ -115,7 +115,7 @@
             </form>
         </div>
     </section>
-    <footer class="footer">
+    <footer class="footer" id="contato">
         <div class="footer-container">
             <p>Este é um projeto de <a href="https://github.com/Paulo-Borges" target="_blank">&copy; Layng 2022</a></p>
             <p>Rua Madureira 565</p>
