--- a/index.html
+++ b/index.html
@@ -1,127 +1,130 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,
-     initial-scale=1.0, shrink-to-fit-no">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width,
+     initial-scale=1.0, shrink-to-fit-no"
+    />
     <title>Brafé One</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header class="menu">
-        <div class="menu-container">
-            <a class="menu-logo" href="#"><img src="img/brafe.png" alt=""></a>
-        </div>
-        <nav class="menu-nav" >
-            <ul>
-                <li><a href="#">Sobre </a></li>
-                <li><a href="#produto">Produtos</a></li>
-                <li><a href="#portifolio">Portfólio</a></li>
-                <li><a href="#contato">Contato</a></li>
-                
-            </ul>
-        </nav>
+      <div class="menu-container">
+        <a class="menu-logo" href="#"><img src="img/brafe.png" alt="" /></a>
+      </div>
+      <nav class="menu-nav">
+        <ul>
+          <li><a href="#">Sobre </a></li>
+          <li><a href="#produto">Produtos</a></li>
+          <li><a href="#portifolio">Portfólio</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main class="intro">
-        <h1>
-            Cafés com a  cara <br>do Brasil
-        </h1>
-        <p>Direto das fazendas de Minas Gerais</p>
+      <h1>Cafés com a cara <br />do Brasil</h1>
+      <p>Direto das fazendas de Minas Gerais</p>
     </main>
 
     <section class="sobre">
-        <h2>Uma mistura de </h2>
-        <div class="sobre-container">
-            <div class="sobre-item">
-                <img src="img/cafe-1.jpg" alt="">
-                <h3>Amor</h3>
-            </div>
-            <div class="sobre-item">
-                <img src="img/cafe-2.jpg" alt="">
-                <h3>Perfeição</h3>
-            </div>
+      <h2>Uma mistura de</h2>
+      <div class="sobre-container">
+        <div class="sobre-item">
+          <img src="img/cafe-1.jpg" alt="" />
+          <h3>Amor</h3>
         </div>
-        <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Reiciendis ex sapiente doloribus, omnis laborum cumque? 
-            Enim, iste consequatur? Facilis asperiores eligendi nemo,
-             sint labore eveniet est aspernatur.</P>
-    </section >
+        <div class="sobre-item">
+          <img src="img/cafe-2.jpg" alt="" />
+          <h3>Perfeição</h3>
+        </div>
+      </div>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis ex
+        sapiente doloribus, omnis laborum cumque? Enim, iste consequatur?
+        Facilis asperiores eligendi nemo, sint labore eveniet est aspernatur.
+      </p>
+    </section>
     <section class="produtos" id="produto">
-        <div class="produtos-container">
-            <div class="produtos-item">
-                <h2 class="produtos-paulista">Paulista</h2>
-                <p>Lorem ipsum 
-                    dolor sit amet consectetur 
-                    adipisicing elit. Libero iure odio quae 
-                    repudiandae error suscipit!</p>
-            </div>
-            <div class="produtos-item">
-                <h2 class="produtos-carioca">Carioca</h2>
-                <p>Lorem ipsum 
-                    dolor sit amet consectetur 
-                    adipisicing elit. Libero iure odio quae 
-                    repudiandae error suscipit!</p>
-            </div>
-            <div class="produtos-item">
-                <h2 class="produtos-mineiro">Mineiro</h2>
-                <p>Lorem ipsum 
-                    dolor sit amet consectetur 
-                    adipisicing elit. Libero iure odio quae 
-                    repudiandae error suscipit!</p>
-            </div>        
+      <div class="produtos-container">
+        <div class="produtos-item">
+          <h2 class="produtos-paulista">Paulista</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero iure
+            odio quae repudiandae error suscipit!
+          </p>
         </div>
-        <a class="produtos-btn" href="#">Saiba Mais</a>
+        <div class="produtos-item">
+          <h2 class="produtos-carioca">Carioca</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero iure
+            odio quae repudiandae error suscipit!
+          </p>
+        </div>
+        <div class="produtos-item">
+          <h2 class="produtos-mineiro">Mineiro</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero iure
+            odio quae repudiandae error suscipit!
+          </p>
+        </div>
+      </div>
+      <a class="produtos-btn" href="#">Saiba Mais</a>
     </section>
     <section class="locais" id="portifolio">
-        <div class="locais-item">
-            <img src="img/botafogo.jpg" 
-            alt="Unidade Botafogo">
-            <h2>Botafogo</h2>
-            <p>Lorem ipsum dolor sit amet 
-                consectetur adipisicing elit. Fugit, ad.</p>
-            <a href="#">Ver Mapa</a>
-
-        </div>
-        <div class="locais-item">
-            <img src="img/iguatemi.jpg" 
-            alt="Unidade Iguatemi">
-            <h2>Iguatemi</h2>
-            <p>Lorem ipsum dolor sit amet 
-                consectetur adipisicing elit. Fugit, ad.</p>
-            <a href="#">Ver Mapa</a>
-        </div>
-        <div class="locais-item">
-            <img src="img/mineirao.jpg" 
-            alt="Unidade Mineirão">
-            <h2>Mineirão</h2>
-            <p>Lorem ipsum dolor sit amet 
-                consectetur adipisicing elit. Fugit, ad.</p>
-            <a href="#">Ver Mapa</a>
-
-        </div>
+      <div class="locais-item">
+        <img src="img/botafogo.jpg" alt="Unidade Botafogo" />
+        <h2>Botafogo</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, ad.
+        </p>
+        <a href="#">Ver Mapa</a>
+      </div>
+      <div class="locais-item">
+        <img src="img/iguatemi.jpg" alt="Unidade Iguatemi" />
+        <h2>Iguatemi</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, ad.
+        </p>
+        <a href="#">Ver Mapa</a>
+      </div>
+      <div class="locais-item">
+        <img src="img/mineirao.jpg" alt="Unidade Mineirão" />
+        <h2>Mineirão</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, ad.
+        </p>
+        <a href="#">Ver Mapa</a>
+      </div>
     </section>
     <section class="assine">
-        <div class="assine-container">
-            <div class="assine-info">
-                <h2>Assine nossa Newslatter</h2>
-                <p>Promoções e eventos mensais</p>
-            </div>
-            <form>
-                <label for="email">Email</label>
-                <input type="text" placeholder="Digite seu email" required="">
-                <button type="submit">Enviar</button>
-            </form>
+      <div class="assine-container">
+        <div class="assine-info">
+          <h2>Assine nossa Newslatter</h2>
+          <p>Promoções e eventos mensais</p>
         </div>
+        <form>
+          <label for="email">Email</label>
+          <input type="text" placeholder="Digite seu email" required="" />
+          <button type="submit">Enviar</button>
+        </form>
+      </div>
     </section>
     <footer class="footer" id="contato">
-        <div class="footer-container">
-            <p>Este é um projeto de <a href="https://github.com/Paulo-Borges" target="_blank">&copy; Layng 2022</a></p>
-            <p>Rua Madureira 565</p>
-            <img src="img/brafe.png" alt="Brafé">
-        </div>
+      <div class="footer-container">
+        <p>
+          Este é um projeto de
+          <a href="https://github.com/Paulo-Borges" target="_blank"
+            >&copy; BORGES 2024</a
+          >
+        </p>
+        <p>Rua Madureira 565</p>
+        <img src="img/brafe.png" alt="Brafé" />
+      </div>
     </footer>
-
-</body>
+  </body>
 </html>
